fix: remove extra space

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,6 +16,7 @@
 
 .img {
   width: 100%;
+  display: block;
   object-fit: cover;
   border-radius: 10px 10px 0 0;
 }
